--- a/local-sarif-evidence-factory/docker/Dockerfile
+++ b/local-sarif-evidence-factory/docker/Dockerfile
@@ -11,8 +11,7 @@ COPY app/ ./app/
 COPY analysis/ ./analysis/
 COPY scripts/ ./scripts/
 
-RUN useradd -m -u 1000 scanner && \
-    chown -R scanner:scanner /app
+RUN useradd -m -u 1000 scanner && chown -R scanner:scanner /app
 
 USER scanner
 
